Fix issue of right-side negative space on mobile
Fixed issue of negative space appearing on the right side of home page on mobile devices, caused by Bulma column padding on food intro subsection.

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -2,8 +2,8 @@
   max-width: 980px;
 }
 
-.food-intro-text {
-  padding-right: 3rem;
+.food-intro-text > * {
+  padding: 0 3rem 0 1rem;
 }
 
 .grid-container {
